# ink-id

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  README.rst  compare-ink-plots.py  demo-cnn.py  extract-surf-voxels.py  features.py  inspect-neigh.py  learn-ink.py  learnink.py  make-surf-tiffs.py  old-learn-ink.py  pyproject.toml  register_2d.sh  requirements.txt  resample-volume.py  setup.cfg  setup.py  trainvol.py
.gitlab/: Data Processing.md
.gitlab/issue_templates/: Data Processing.md
SubvolumeVisualization/: .gitignore  InkidGradCam.py  README.md  VolumeRender.py  inkid_gradcam.py  vis.yml  volume_renderer.py
SubvolumeVisualization/3dvolume_visualization/: README.md  simple_rendering.py  subvolume_inspection.ipynb  subvolume_visualization.py
SubvolumeVisualization/display/: app.py  find_paths.py
SubvolumeVisualization/gradcam/: README.md
SubvolumeVisualization/intermediate_activations/: README.md  combine_images_copy.sh
SubvolumeVisualization/rendering/: README.md  inkid_gradcam.py  subvolume_renderer.py
SubvolumeVisualization/tests/: test_combined.py  test_gradcam.py
SubvolumeVisualization/visualization_scripts/: miscellaneous_functions.py
UnsupervisedLearning/VAE/: README.md  data.py  experimentScript.py  main.py  model.py  ops.py
UnsupervisedLearning/fullyCNN/: experimentScript.py  ops.py
docs/: Makefile  data-processing-workflow.md  make.bat
docs/source/: conf.py  index.rst  inkid.data.rst  inkid.metrics.rst  inkid.model.rst  inkid.ops.rst  inkid.rst  inkid.schemas.rst  inkid.util.rst  inkid.volumes.rst  modules.rst
examples/data_files/: DummyTest.json  DummyTest_grid1x2.txt  DummyTest_grid1x2_row0_col0.json  DummyTest_grid1x2_row0_col1.json
examples/region_set_files/: carbon-phantom_Col1_k-fold-characters-region-set.json  lunate-sigma-grid-2x5.json  lunate-sigma-one-region.json  lunate-sigma.json
examples/volume_protocol/: get_subvolumes.py
ink-id/: ops.py  volume.py  volumeset.py
inkid/: __init__.py  default_arguments.txt  default_parameters.json  ops.py  parameters.json  volume.py
inkid/data/: PPM.py  Region.py  RegionSet.py  Volume.html  Volume.py  Volume.pyx  Volume_cy.html  Volume_cy.pxd  Volume_cy.pyx  __init__.py  cythonutils.pxd  cythonutils.pyx  dataset.py  mathutils.pxd  mathutils.py  mathutils.pyx  new_volume.py  ppm.py  test_Volume.py  test_dataset.py  test_mathutils.py  test_volume.py  volume.pxd  volume.py  volume.pyx
inkid/metrics/: __init__.py  metrics.py  plot_metrics_from_csv.py
inkid/model/: __init__.py  cyclegan_networks.py  model.py
inkid/ops/: ops.py  (+1 more)
scripts/: benchmark.py  compare-average-vectors.py  compare-ink-plots.py  crop-ground-truth.py  dataset_estimators.py  datruth.py  entire.py  extract-surf-voxels.py  extract_surf_voxels.py  generate-ground-truth.py  generate-perlin-noise.py  generate-videos.py  get_top_bottom_n_subvolumes.py  grid-stats.py  inspect-neigh.py  inspect_neigh.py  make-tiff-from-h5.py  make_surf_tiffs.py  make_tiff_from_h5.py  network-size.py  nudge.py  partition-volume.py  predict_from_model.py  predict_from_model_with_datasets_and_estimators.py  receptive_field.py  resize-filters-construct-video.py  simple-surface.py  simulate-accuracy.py  slurm-train.sh  slurm_carbon_multicolumn.sh  slurm_carbon_phantom.sh  slurm_train.sh  slurm_train_and_predict.sh  splice.py  submit.sh  train-and-predict.py  train_and_predict.py  train_and_predict_with_datasets.py  train_and_predict_with_datasets_and_estimators.py  weight-squares.py
singularity/: inkid.def  inkid_general_cpu.sh  rclone_upload.sh  submit.sh  submit_with_summary.sh  summary.sh  vc.def
util/: compare-ink-plots.py  extract-surf-voxels.py  make-surf-tiffs.py  nudge.py
visualization/: .gitignore  README.md
(+199 files in other folders)
