[metadata]
name = inkid
version = 0.0.1
author = University of Kentucky
description = Identify ink via machine learning
long_description = file: README.rst
long_description_content_type = text/rst
license = GPLv3
url = https://code.vis.uky.edu/seales-research/ink-id
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    autopep8
    Cython
    dicttoxml
    gitpython
    humanize
    imageio
    jsmin
    jsonschema
    matplotlib
    Pillow
    pygifsicle
    pylint
    scikit-learn
    sphinx
    tensorboard
    torch
    torch-summary
    tqdm
    wand
zip_safe = False
python_requires = >=3.8

[options.package_data]
* = *.schema.json

[options.entry_points]
console_scripts =
    inkid-train-and-predict = inkid.scripts.train_and_predict:main
    inkid-summary = inkid.scripts.create_summary_images:main
    inkid-rclone-upload = inkid.scripts.rclone_upload:main
