[metadata]
name = inkid
version = 0.0.7
author = University of Kentucky
author_email = stephen.parsons@uky.edu
description = Identify ink via machine learning
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GPLv3
url = https://gitlab.com/educelab/ink-id
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    autopep8
    Cython
    dicttoxml
    gitpython
    humanize
    imageio
    jsmin
    jsonschema
    kaleido
    matplotlib
    pandas
    Pillow
    plotly
    psutil
    pygifsicle
    pylint
    PySide6
    scikit-learn
    tensorboard
    tensorstore
    torch
    torch-summary
    tqdm
    wand
zip_safe = False
python_requires = >=3.8

[options.extras_require]
dev = black; sphinx; sphinx-rtd-theme

[options.package_data]
* =
    *.schema.json
    *.pyx
    *.pxd

[options.entry_points]
console_scripts =
    inkid-train-and-predict = inkid.scripts.train_and_predict:main
    inkid-summary = inkid.scripts.create_summary_images:main
    inkid-rclone-upload = inkid.scripts.rclone_upload:main
gui_scripts =
    region-set-studio = inkid.apps.region_set_studio.__main__:main
